2001-08-17  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/List.pm (_fill_config): Return the list of available
	templates.  Helps eliminate a couple of layering violations.

	* lib/Majordomo.pm (_createlist): Regenerate all configurations of
	all lists on createlist-regen.

	* lib/Majordomo.pm (_lists): Make use of _fill_config returning
	the list of templates.
	
2001-08-16  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Remove spaces from list names.

	* lib/Majordomo.pm:  (_createlist)  Bugfix:  if a list
	exists, use its settings to determine the parameters
	for alias creation.  Otherwise, use both the DEFAULT list
	and any default templates.
	Bugfix:  Display the aliases if createlist-nocreate is used
	and the maintain_config option is turned on.
	(who_start)  Correct the second list validity test for
	the who-common command.  Thanks to Roger Klorese.

2001-08-16  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (_createlist): Parse digests variable from
	DEFAULT for use when creating new lists.  Also pass in priority
	and domain_priority.	

2001-08-15  Jason Tibbitts  <tibbs@math.uh.edu>

	* t/shell.t: Fix test 15 to match changes in "password" format
	file.

	* lib/Majordomo.pm (configshow): Bugfix: in the case of a single
	scalar variable, returned $auto where we meant to return $data.

2001-08-15  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (show,who)  Bugfix:  include the third part of
	the delivery class when determining which class applies to a
	subscription.

2001-08-14  Michael Yount <csf@moscow.com>

	* bin/mj_shell:  Invoke an editor automatically when
	the faq-edit, get-edit, info-edit, or intro-edit commands
	are used.

	* bin/mj_wwwadm:  Add support for the newfaq, newinfo, newintro,
	and put commands.  Use format files with the faq, get, info, and 
	intro commands.

	* bin/mj_wwwusr:  Use format files with the faq, info, and intro
	commands.  Support the hidepost personal setting.
